// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticate Component should render sign in if signed out 1`] = `
<div
  className="ui container"
>
  <div
    className="ui padded segment"
  >
    <button
      className="ui fluid secondary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign Up
    </button>
    <div
      className="ui horizontal divider"
    >
      Or
    </div>
    <button
      className="ui fluid primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign In
    </button>
  </div>
  <div
    className="ui padded segment"
  >
    <div>
      <h3
        className="ui dividing header"
      >
        Sign In
      </h3>
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="at icon"
            />
            <input
              disabled={undefined}
              name="email"
              onChange={[Function]}
              placeholder="email"
              tabIndex={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="asterisk icon"
            />
            <input
              disabled={undefined}
              name="pasword"
              onChange={[Function]}
              placeholder="password"
              tabIndex={undefined}
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          className="ui fluid primary button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
          type="submit"
        >
          Sign In
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Authenticate Component should render sign out if signed in 1`] = `
<div
  className="ui container"
>
  <div
    className="ui padded segment"
  >
    <div>
      <h3
        className="ui dividing header"
      >
        Sign Out
      </h3>
      <button
        className="ui fluid primary button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        Sign Out
      </button>
    </div>
  </div>
</div>
`;

exports[`Authenticate Component should show sign up if sign up is selected 1`] = `
<div
  className="ui container"
>
  <div
    className="ui padded segment"
  >
    <button
      className="ui fluid secondary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign Up
    </button>
    <div
      className="ui horizontal divider"
    >
      Or
    </div>
    <button
      className="ui fluid primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign In
    </button>
  </div>
  <div
    className="ui padded segment"
  >
    <div>
      <h3
        className="ui dividing header"
      >
        Sign Up
      </h3>
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="at icon"
            />
            <input
              disabled={undefined}
              name="email"
              onChange={[Function]}
              placeholder="email"
              tabIndex={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="asterisk icon"
            />
            <input
              disabled={undefined}
              name="pasword"
              onChange={[Function]}
              placeholder="password"
              tabIndex={undefined}
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          className="ui fluid primary button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
          type="submit"
        >
          Sign Up
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Authenticate Component should show sign up if sign up is selected 2`] = `
<div
  className="ui container"
>
  <div
    className="ui padded segment"
  >
    <button
      className="ui fluid secondary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign Up
    </button>
    <div
      className="ui horizontal divider"
    >
      Or
    </div>
    <button
      className="ui fluid primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Sign In
    </button>
  </div>
  <div
    className="ui padded segment"
  >
    <div>
      <h3
        className="ui dividing header"
      >
        Sign In
      </h3>
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="at icon"
            />
            <input
              disabled={undefined}
              name="email"
              onChange={[Function]}
              placeholder="email"
              tabIndex={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="ui left icon input"
          >
            <i
              aria-hidden="true"
              className="asterisk icon"
            />
            <input
              disabled={undefined}
              name="pasword"
              onChange={[Function]}
              placeholder="password"
              tabIndex={undefined}
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          className="ui fluid primary button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
          type="submit"
        >
          Sign In
        </button>
      </form>
    </div>
  </div>
</div>
`;
